# os

./: .gitignore  Cargo.toml  LICENSE  README.md  mkimg.sh  qemu.sh  rust-toolchain.toml  rustfmt.toml  x86_64-unknown-linux-gnu.ld
abi/: Cargo.toml
abi-tests/: Cargo.toml
abi-tests/src/: abi_tests.rs
abi/src/: elf.rs  lib.rs  string.rs  vec.rs
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs  paging.rs  serial.rs
compiler/: Cargo.toml
compiler/src/: main.rs
crates/abi/: Cargo.toml
crates/abi-tests/src/: abi_tests.rs
crates/abi/src/: cursor_icon.rs  elf.rs  flex.rs  layout.rs  lib.rs  math.rs  mem.rs  path.rs  stable_string.rs  stable_vec.rs  text.rs  tree.rs  type_map.rs  vec.rs  view.rs
crates/bit-utils/: Cargo.toml
crates/bit-utils/src/: bit_utils.rs
crates/boot-info/: Cargo.toml
crates/boot-info/src/: boot_info.rs
crates/defer-mutex/: Cargo.toml
crates/defer-mutex/src/: defer_mutex.rs
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/elf/: Cargo.toml
crates/elf/src/: elf.rs
crates/emulator/: Cargo.toml  run.sh
crates/emulator/src/: compiler.rs  main.rs
crates/framebuffer/: Cargo.toml
crates/framebuffer/src/: font.rs  framebuffer.rs
crates/init/: Cargo.toml
crates/init/src/: main.rs
crates/input/: Cargo.toml
crates/input/src/: input.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: c_str.rs  error.rs  file.rs  lib.rs  object.rs  proc.rs  shm.rs  signal.rs
crates/loader/: Cargo.toml  prepare_test_objects.sh
crates/loader/src/: lib.rs
crates/loader/tests/: basic.rs
crates/loader/tests/input/: add_one.rs  depends_on_add_one.rs
crates/log/: Cargo.toml
crates/log/src/: log.rs
crates/memory-types/: Cargo.toml
crates/memory-types/src/: memory_types.rs  paging.rs  physical_memory.rs  virtual_memory.rs
crates/pci/: Cargo.toml
crates/pod/: Cargo.toml
crates/pod/src/: pod.rs
crates/process/: Cargo.toml
crates/process/src/: process.rs
crates/shell/: Cargo.toml
crates/shell/src/: compiler.rs  cursor.rs  egl.rs  input.rs  log.rs  main.rs  object.rs
crates/spin-mutex/: Cargo.toml
crates/spin-mutex/src/: spin_mutex.rs
crates/time/: Cargo.toml
crates/time/src/: time.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md
drivers/: README.md
drivers/pci/: Cargo.toml
drivers/pci/src/: pci.rs  pci_capability.rs  pci_class.rs
drivers/pit/: Cargo.toml
drivers/pit/src/: pit.rs
drivers/rtc/: Cargo.toml
drivers/rtc/src/: rtc.rs
drivers/virtio/: Cargo.toml
drivers/virtio/src/: virtio.rs  virtio_input.rs
drivers/x86-port/: Cargo.toml
drivers/x86-port/src/: x86_port.rs
example/: Cargo.toml
example-driver/: Cargo.toml
example-driver/src/: example_driver.rs
example/example-dep/: Cargo.toml
example/example-dep/src/: example_dep.rs
example/src/: example.rs
init/: Cargo.toml
init/src/: main.rs
kernel/: Cargo.toml  kernel_x86_64.ld  run.sh  x86_64-app.json
kernel-next/: Cargo.toml  run.sh  x86_64-kernel.json
kernel-next/.cargo/: config.toml
kernel-next/src/: acpi.rs  apic.rs  executor.rs  gdt.rs  hpet.rs  idt.rs  main.rs  memory.rs  pit.rs  rtc.rs  serial.rs  tsc.rs
kernel/src/: acpi.rs  allocator.rs  apic.rs  ata.rs  c_str.rs  clock.rs  defer_mutex.rs  epoll.rs  error.rs  executor.rs  file.rs  gdt.rs  hpet.rs  idt.rs  input.rs  lib.rs  loader.rs  main.rs  memory.rs  mount.rs  pci.rs  pit.rs  proc.rs  raw.rs  rtc.rs  scheduler.rs  serial.rs  signal.rs  traits.rs  tsc.rs  vfat.rs  virtio.rs  virtio_gpu.rs  virtio_input.rs  window_manager.rs
linux/: README.md  make_home_image.sh  run_qemu.sh
linux/init/src/: main.rs
linux/shell/: Cargo.toml  build.rs
linux/shell/src/: compiler.rs  cursor.rs  main.rs
linux/uapi/: Cargo.toml
linux/uapi/src/: constants.rs  epoll.rs  error.rs  file.rs  lib.rs  mount.rs  object.rs  proc.rs  raw.rs  shm.rs  signal.rs  traits.rs
shell/: Cargo.toml  build.rs
shell/src/: compiler.rs  cursor.rs  egl.rs  input.rs  log.rs  main.rs  object.rs
testing/: Cargo.toml
testing/src/: lib.rs
tools/runner/: Cargo.toml
tools/runner/src/: main.rs
