[workspace]
resolver = "3"
members = [
    "bootloader",
    "crates/*",
    "drivers/*",
    "example",
    "kernel",
    "linux/init",
    "linux/shell",
    "linux/uapi",
    "tools/runner",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
abi = { path = "crates/abi" }
linux-uapi = { path = "linux/uapi" }
