[package]
name = "example"
version.workspace = true
edition.workspace = true

[lib]
path = "src/example.rs"

[dependencies]
example-dep = { path = "./example-dep" }
framebuffer = { path = "../crates/framebuffer" }
input = { path = "../crates/input" }
pit = { path = "../drivers/pit" }
time = { path = "../crates/time" }
