[package]
name = "example"
version.workspace = true
edition.workspace = true

[lib]
path = "src/example.rs"

[dependencies]
framebuffer = { path = "../crates/framebuffer" }
input = { path = "../crates/input" }
pit = { path = "../drivers/pit" }
process = { path = "../crates/process" }
time = { path = "../crates/time" }
