[package]
name = "kernel-next"
version.workspace = true
edition.workspace = true

[dependencies]
acpi = "6.1.0"
boot-info = { path = "../crates/boot-info" }
framebuffer = { path = "../crates/framebuffer" }
linked_list_allocator = "0.9.0"
log = { path = "../crates/log" }
memory-types = { path = "../crates/memory-types" }
spin-mutex = { path = "../crates/spin-mutex" }
time = { path = "../crates/time" }
x2apic = "0.5.0"
x86_64 = "0.15.4"
