[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
acpi = "6.1.0"
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linked_list_allocator = "0.9.0"
log = "0.4"
pci = { path = "../crates/pci" }
spin = "0.10.0"
tinyvec = "1"
uart_16550 = "0.4.0"
uefi = { version = "0.36.1", default-features = false }
x86_64 = "0.15.4"
