[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
acpi = "6.1.0"
bit-utils = { path = "../crates/bit-utils" }
boot-info = { path = "../crates/boot-info" }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
framebuffer = { path = "../crates/framebuffer" }
linked_list_allocator = "0.9.0"
log = { path = "../crates/log" }
memory-types = { path = "../crates/memory-types" }
pci = { path = "../drivers/pci" }
spin-mutex = { path = "../crates/spin-mutex" }
time = { path = "../crates/time" }
virtio = { path = "../drivers/virtio" }
x2apic = "0.5.0"
x86_64 = "0.15.4"
x86-port = { path = "../drivers/x86-port" }
