[package]
name = "shell"
version.workspace = true
edition.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
abi.workspace = true
anyhow = "1"
drm = "0.14.1"
egui = "0.33"
egui_glow = "0.33"
egui-phosphor = { version = "0.11", features = ["fill"] }
evdev = "0.13"
gbm = "0.18.0"
glow = "0.16"
glutin = "0.32.3"
kernel.workspace = true
libc = "0.2"
log = { version = "0.4", features = ["std"] }
parley = { version = "0.7.0", default-features = false, features = ["std"] }
raw-window-handle = "0.6"
slotmap = { version = "1", default-features = false }
thiserror = "2"
xcursor = "0.3.10"

[build-dependencies]
gl_generator = "0.14"
